Initial code of openvpn beat

--- a/fields.yml
+++ b/fields.yml
@@ -6095,13 +6095,30 @@
       type: group
       description: >
       fields:
-        - name: load-stats
+        - name: load_stats
           type: group
           release: beta
           description: >
-            load-stats
+            load_stats contains metric, like nclinets, bytesin, bytesout
           fields:
-            - name: example
-              type: keyword
+            - name: port
+              type: long
               description: >
-                Example field
+                Port on which management interface connect
+        
+            - name: clients
+              type: long
+              description: >
+                 Number of clients
+        
+            - name: bytesin
+              type: long
+              format: bytes
+              description: >
+                 Number of bytesin
+        
+            - name: bytesout
+              type: long
+              format: bytes
+              description: >
+                 Number of bytes out
