--- a/modules.d/connection.yml
+++ b/modules.d/connection.yml
@@ -2,8 +2,8 @@
 # Docs: https://www.elastic.co/guide/en/beats/openvpnbeat/master/openvpnbeat-module-connection.html
 
 - module: connection
-  metricsets: ["load-stats"]
-  enabled: false
-  period: 10s
-  hosts: ["localhost"]
-
+  metricsets: ["load_stats"]
+  enabled: true
+  period: 60s
+  # specify openvpn management interface ports
+  ports: ["7505"]
